# Tallow

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  SECURITY.md  SUPPORT.md  code-review.md  completion-review.md  docker-compose.yml  go.mod  go.sum  security-review.md  sqlc.yaml
.github/: pull_request_template.md
analyzers/: README.md  pyproject.toml
analyzers/rules/: __init__.py  high_entropy_blob.py  js_code.py  js_env_token.py  js_eval_decode.py  npm_json.py  npm_lifecycle.py  npm_network_script.py  py_decode_exec.py  pypi_setup_exec.py  registry.py  unexpected_binary.py  webhook_url.py
analyzers/tallow_analyzer_sdk/: __init__.py  canonical_json.py  constants.py  context.py  contracts.py  evidence.py  files.py  finding.py  finding_id.py  paths.py  redaction.py  rules.py
analyzers/tallow_analyzers/: __init__.py  cli.py
analyzers/tests/: conftest.py  test_analyzer_integration.py  test_canonical_json.py  test_cli.py  test_context_files.py  test_contracts.py  test_evidence.py  test_finding_id.py  test_fixture_linter.py  test_network_off.py  test_rule_registry.py
analyzers/tests/fixtures/snapshots/simple_npm/: manifest.json
analyzers/tests/fixtures/snapshots/simple_npm/package/: package.json
analyzers/tests/rules/: test_high_entropy_blob.py  test_js_env_token.py  test_js_eval_decode.py  test_npm_lifecycle.py  test_npm_network_script.py  test_py_decode_exec.py  test_pypi_setup_exec.py  test_unexpected_binary.py  test_webhook_url.py
configs/: tallow.example.yml
(+476 files in other folders)
