[project]
name = "tallow-analyzers"
version = "0.1.0"
description = "Deterministic package artifact analyzers for Tallow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.26.0",
]

[project.scripts]
tallow-analyzer = "tallow_analyzers.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tallow_analyzer_sdk", "tallow_analyzers", "rules"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
